--- a/index.html
+++ b/index.html
@@ -2,211 +2,17 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Layout</title>
-    <style>
-
-      /********** Base styles **********/
-      * {
-        box-sizing: border-box;
-      }
-      h1 {
-        margin-bottom: 15px;
-      }
-
-      
-
-      /********** Desktop Version **********/
-      @media (min-width: 992px) {
-        .col-dv-1, .col-dv-2, .col-dv-3, .col-dv-4, .col-dv-5, .col-dv-6, .col-dv-7, .col-dv-8, .col-dv-9, .col-dv-10, .col-dv-11, .col-dv-12 {
-          float: left;
-        }
-        .col-dv-1 {
-          width: 8.33%;
-        }
-        .col-dv-2 {
-          width: 16.66%;
-        }
-        .col-dv-3 {
-          width: 25%;
-        }
-        .col-dv-4 {
-          width: 33.33%;
-        }
-        .col-dv-5 {
-          width: 41.66%;
-        }
-        .col-dv-6 {
-          width: 50%;
-        }
-        .col-dv-7 {
-          width: 58.33%;
-        }
-        .col-dv-8 {
-          width: 66.66%;
-        }
-        .col-dv-9 {
-          width: 74.99%;
-        }
-        .col-dv-10 {
-          width: 83.33%;
-        }
-        .col-dv-11 {
-          width: 91.66%;
-        }
-        .col-dv-12 {
-          width: 100%;
-        }
-      }
-
-      /********** Tablet Version **********/
-      @media (min-width: 768px) and (max-width: 991px) {
-        .col-tv-1, .col-tv-2, .col-tv-3, .col-tv-4, .col-tv-5, .col-tv-6, .col-tv-7, .col-tv-8, .col-tv-9, .col-tv-10, .col-tv-11, .col-tv-12 {
-          float: left;
-        }
-        .col-tv-1 {
-          width: 8.33%;
-        }
-        .col-tv-2 {
-          width: 16.66%;
-        }
-        .col-tv-3 {
-          width: 25%;
-        }
-        .col-tv-4 {
-          width: 33.33%;
-        }
-        .col-tv-5 {
-          width: 41.66%;
-        }
-        .col-tv-6 {
-          width: 50%;
-        }
-        .col-tv-7 {
-          width: 58.33%;
-        }
-        .col-tv-8 {
-          width: 66.66%;
-        }
-        .col-tv-9 {
-          width: 74.99%;
-        }
-        .col-tv-10 {
-          width: 83.33%;
-        }
-        .col-tv-11 {
-          width: 91.66%;
-        }
-        .col-tv-12 {
-          width: 100%;
-        }
-      }
-
-      /********** Mobile Version **********/
-      @media (max-width: 767px) {
-        .col-mv-1, .col-mv-2, .col-mv-3, .col-mv-4, .col-mv-5, .col-mv-6, .col-mv-7, .col-mv-8, .col-mv-9, .col-mv-10, .col-mv-11, .col-mv-12 {
-          float: left;
-        }
-        .col-mv-1 {
-          width: 8.33%;
-        }
-        .col-mv-2 {
-          width: 16.66%;
-        }
-        .col-mv-3 {
-          width: 25%;
-        }
-        .col-mv-4 {
-          width: 33.33%;
-        }
-        .col-mv-5 {
-          width: 41.66%;
-        }
-        .col-mv-6 {
-          width: 50%;
-        }
-        .col-mv-7 {
-          width: 58.33%;
-        }
-        .col-mv-8 {
-          width: 66.66%;
-        }
-        .col-mv-9 {
-          width: 74.99%;
-        }
-        .col-mv-10 {
-          width: 83.33%;
-        }
-        .col-mv-11 {
-          width: 91.66%;
-        }
-        .col-mv-12 {
-          width: 100%;
-        }
-      }
-
-      .title_2 {
-        position: relative;
-        border: 4px solid black;
-        background-color: gray;
-        width: 90%;
-        height: 150px;
-        margin-bottom: 28px;
-        margin-right: auto;
-        margin-left: auto;
-        font-family: Helvetica;
-        color: white;
-      }
-
-      #Chicken {
-        position: absolute;
-        width: 30%;
-        height: 30%;
-        margin-top: 0;
-        top: 0;
-        right: 0;
-        background-color: rgb(248, 169, 160);
-        border-bottom: 4px solid black;
-        border-left: 4px solid black;
-      }
-
-      #Beef {
-        position: absolute;
-        width: 30%;
-        height: 30%;
-        margin-top: 0;
-        top: 0;
-        right: 0;
-        background-color: rgb(245, 99, 99);
-        border-bottom: 4px solid black;
-        border-left: 4px solid black;
-      }
-
-      #Sushi {
-        position: absolute;
-        width: 30%;
-        height: 30%;
-        margin-top: 0;
-        top: 0;
-        right: 0;
-        background-color: rgb(228, 247, 153);
-        border-bottom: 4px solid black;
-        border-left: 4px solid black;
-      }
-
-      /* Simple Responsive Framework. */
-      .row {
-        width: 100%;
-      }
-
-    </style>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <h1>Responsive Layout</h1>
+    <h1>Our menu</h1>
 
     <div class="row">
-      <div class="col-dv-4 col-tv-6 col-mv-12"><div class="title_2"><p id="Chicken">Chicken</p></div></div>
-      <div class="col-dv-4 col-tv-6 col-mv-12"><div class="title_2"><p id="Beef">Beef</p></div></div>
-      <div class="col-dv-4 col-tv-12 col-mv-12"><div class="title_2"><p id="Sushi">Sushi</p></div></div>
+      <div class="col-dv-4 col-tv-6 col-mv-12"><div class="title_2"><p class="food-card" id="Chicken"><span>Chicken</span></p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div></div>
+      <div class="col-dv-4 col-tv-6 col-mv-12"><div class="title_2"><p class="food-card" id="Beef"><span>Beef</span></p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div></div>
+      <div class="col-dv-4 col-tv-12 col-mv-12"><div class="title_2"><p class="food-card" id="Sushi"><span>Sushi</span></p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div></div>
     </div>
 
   </body>
